force-app/src/objects/c2g__codaPaymentMediaControl__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values, company, and company bank account details.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated : Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <label>Originator Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankSortCode__c</fullName>
        <label>Originator Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofAccounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Controls (Company)</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayeeName__c</fullName>
        <label>Originator Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentControlNumber__c</fullName>
        <label>Payment Control Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentNumber__c</fullName>
        <formula>c2g__Payment__r.Name</formula>
        <label>Payment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CreditTotal__c</fullName>
        <formula>IF( c2g__Payment__r.c2g__PaymentTypes__c = &quot;Payments&quot;, c2g__PaymentValue__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitTotal__c</fullName>
        <formula>IF( c2g__Payment__r.c2g__PaymentTypes__c = &quot;Collections&quot;, c2g__PaymentValue__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountNumberSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Destination Bank Account Number Sum</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountTextSum__c</fullName>
        <label>Destination Bank Account Text Sum</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationSortCodeNumberSum2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Destination Sort Code Number Sum 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationSortCodeNumberSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Destination Sort Code Number Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotal2__c</fullName>
        <formula>CASE ( LEN ( TEXT (ffbf__DestinationSortCodeNumberSum__c) ), 
		1, &quot;000000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,1),
		2, &quot;00000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,2),
		3, &quot;0000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,3),
		4, &quot;000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,4),
		5, &quot;00000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,5),
		6, &quot;0000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,6),
		7, &quot;000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,7),
		8, &quot;00&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,8),
		9, &quot;0&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,9), 
		RIGHT (TEXT(ffbf__DestinationSortCodeNumberSum__c), 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotalText__c</fullName>
        <formula>CASE ( LEN ( ffbf__DestinationBankAccountTextSum__c ), 
1, &quot;00000000000&quot;,
2, &quot;00000000000&quot;,
3, &quot;00000000000&quot;,
4, &quot;00000000000&quot;,
5, &quot;0000000000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,1),
6, &quot;000000000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,2),
7, &quot;00000000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,3),
8, &quot;0000000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,4),
9, &quot;000000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,5),
10, &quot;00000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,6),
11, &quot;0000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,7),
12, &quot;000&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,8),
13, &quot;00&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,9),
14, &quot;0&quot; &amp; MID ( ffbf__DestinationBankAccountTextSum__c ,1,10),
15, MID ( ffbf__DestinationBankAccountTextSum__c ,1,11),
MID (  ffbf__DestinationBankAccountTextSum__c , 2, 11) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotal__c</fullName>
        <formula>CASE ( LEN ( TEXT (ffbf__DestinationBankAccountNumberSum__c) ), 
1, &quot;00000000000&quot;,
2, &quot;00000000000&quot;,
3, &quot;00000000000&quot;,
4, &quot;00000000000&quot;,
5, &quot;0000000000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,1),
6, &quot;000000000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,2),
7, &quot;00000000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,3),
8, &quot;0000000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,4),
9, &quot;000000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,5),
10, &quot;00000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,6),
11, &quot;0000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,7),
12, &quot;000&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,8),
13, &quot;00&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,9),
14, &quot;0&quot; &amp;  MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,10),
15, MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,11),
MID ( TEXT( ffbf__DestinationBankAccountNumberSum__c) , 2, 11) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordCounts__c</fullName>
        <label>Record Counts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Media Control</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaPaymentMediaControl</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaPaymentMediaControl</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Controls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>